# BOXMEOUT_STELLA

.github/workflows/: remind-contributors.yml
.vite/vitest/: results.json
backend/: .env.example  .eslintrc.json  BLOCKCHAIN_INDEXER_SERVICE.md  INDEXER_IMPLEMENTATION_SUMMARY.md  INDEXER_PR_LINK.md  issues.md  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: .gitignore  index.ts
backend/src/controllers/: auth.controller.ts  disputes.controller.ts  indexer.controller.ts  markets.controller.ts  notifications.controller.ts  oracle.controller.ts  predictions.controller.ts  referrals.controller.ts  trading.controller.ts  treasury.controller.ts  users.controller.ts  wallet.controller.ts
backend/src/middleware/: admin.middleware.ts  error.middleware.ts  index.ts  rateLimit.middleware.ts  security.middleware.ts
backend/src/repositories/: base.repository.ts  dispute.repository.ts  distribution.repository.ts  index.ts  leaderboard.repository.ts  market.repository.ts  notification.repository.ts  prediction.repository.ts  share.repository.ts  trade.repository.ts  treasury-distribution.repository.ts  user.repository.ts
backend/src/routes/: auth.routes.ts  disputes.routes.ts  oracle.ts  (+8 more)
backend/tests/: auth.integration.test.ts  indexer.integration.test.ts  indexer.service.test.ts  setup.ts
frontend/: jest.config.js  package-lock.json  package.json
stellar-contract/: Cargo.toml
stellar-contract/src/: amm.rs  errors.rs  events.rs  prediction_market.rs  storage.rs
stellar-contract/tests/: fuzz_amm.rs  integration_test.rs
(+73 files in other folders)
