[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []
proptest = ["dep:proptest"]

[dependencies]
soroban-sdk = { version = "23", features = [] }

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }
proptest = { version = "1", optional = true }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["testutils"]

[[test]]
name = "fuzz_amm"
path = "tests/fuzz_amm.rs"
required-features = ["testutils", "proptest"]

[profile.release]
opt-level = "z"
debug = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
